# varta-svc-agent

./: .env  .env.example  .gitignore  Deployment.md  Dockerfile  README.md  pyproject.toml
charts/varta-svc-agent/: Chart.yaml  values.yaml
charts/varta-svc-agent/templates/: _helpers.tpl  deployment.yaml  service.yaml
fixtures/: items.json  search_index.json  snippets.json
scripts/: build_index.py
src/: app.py  config.py  sse.py  types.py
src/graph/: answerer.py  graph.py  guardrails.py  planner.py  retriever.py
src/llm/: provider.py
src/retrieval/: client_coreapi.py  hybrid.py  store_vector.py
src/utils/: text.py  tfidf.py  time.py
tests/: test_chat_sse.py  test_health.py  test_retrieve.py
