[tool.poetry]
name = "varta-svc-agent"
version = "0.1.0"
description = "Agent service for chat + RAG over site data (mock-first)"
authors = ["Varta Team"]
readme = "README.md"
# This is an application (no installable package); keeps src layout simple.
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.115"
uvicorn = {version = ">=0.30", extras = ["standard"]}
pydantic = ">=2.8"
httpx = ">=0.27"
python-dotenv = ">=1.0"
numpy = ">=1.26"
scikit-learn = ">=1.4"
tldextract = ">=5.1"
openai = ">=1.0.0"
sentence-transformers = {version = ">=3.0", markers = "platform_machine != 'ppc64le'"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3"
pytest-asyncio = ">=0.23"
black = ">=24.0"
ruff = ">=0.6"
mypy = ">=1.10"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
